--- a/overlays/dev/front-service-patch.yaml
+++ b/overlays/dev/front-service-patch.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-frontend
+  namespace: default
   annotations:
     alb.ingress.kubernetes.io/healthcheck-path: "/"
   labels:
